Working login and auth

--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,4 +1,5 @@
 <div class="layout-footer">
+    <!-- TODO: Colocar logo do cara -->
     <img src="assets/layout/images/logo-argos.png" alt="Logo" height="20" class="mr-2"/>
 
 </div>
