--- a/src/app/seguranca/auth/login/login.component.html
+++ b/src/app/seguranca/auth/login/login.component.html
@@ -19,8 +19,9 @@
                 style="border-radius: 53px"
             >
                 <div class="text-center mb-5">
+                    <!-- TODO: Trocar pra logo do cara -->
                     <img
-                        src="assets/layout/images/logo-argos.png"
+                        src="assets/layout/images/angular_solidBlack.svg"
                         alt="Image"
                         height="50"
                         class="mb-3"
@@ -36,7 +37,7 @@
                                 pInputText
                                 class="w-full"
                                 style="padding: 1rem"
-                                formControlName="login"
+                                formControlName="email"
                             />
                             <label for="float-input">Email</label>
                         </span>
@@ -44,7 +45,7 @@
                         <span class="p-float-label block text-900">
                             <input
                                 id="password1"
-                                formControlName="senha"
+                                formControlName="password"
                                 placeholder="Senha"
                                 type="password"
                                 pInputText
