Criação de visitas finalizada

--- a/src/app/solicitacao-servico/visita-page/visita-page.component.html
+++ b/src/app/solicitacao-servico/visita-page/visita-page.component.html
@@ -5,16 +5,15 @@
             <p-toolbar styleClass="mb-4">
                 <ng-template pTemplate="left">
                     <div class="my-2">
-                        <button pButton pRipple label="Nova Atividade" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNewAtividade()"></button>
-                        <button pButton pRipple label="Tipos de atividade" icon="pi pi-plus" class="p-button-success mr-2" (click)="createTipoAtividade()"></button>
+                        <button pButton pRipple label="Nova Visita" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNewVisita()"></button>
                     </div>
                 </ng-template>
             </p-toolbar>
 
-            <p-table #dt [value]="atividades" [columns]="cols" responsiveLayout="scroll" [globalFilterFields]="['nome']" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" currentPageReportTemplate="Monstrando {first} até {last} de {totalRecords} atividades" [rowHover]="true" dataKey="id">
+            <p-table #dt [value]="visitas" [columns]="cols" responsiveLayout="scroll" [globalFilterFields]="['nome']" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" currentPageReportTemplate="Monstrando {first} até {last} de {totalRecords} visitas" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
-                        <h5 class="m-0">Atividades</h5>
+                        <h5 class="m-0">Visitas</h5>
                         <span class="block mt-2 md:mt-0 p-input-icon-left">
                             <i class="pi pi-search"></i>
                             <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Buscar..."  class="w-full sm:w-auto"/>
@@ -28,19 +27,19 @@
                         <th></th>
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-atividade>
+                <ng-template pTemplate="body" let-visita>
                     <tr>
                         <td style="width:50%; min-width:12rem;">
                             <span class="p-column-title">Nome</span>
-                            {{atividade.nome}}
+                            {{visita.nome}}
                         </td>
                         <td style="width:50%; min-width:6rem;">
                             <span class="p-column-title">Valor</span>
-                            {{atividade.valorReferencia | currency:'BRL'}}
+                            {{visita.valorReferencia | currency:'BRL'}}
                         </td>
                         <td>
                             <div class="flex">
-                                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteAtividade(atividade)"></button>
+                                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="deleteVisita(visita)"></button>
                             </div>
                         </td>
                     </tr>
@@ -48,66 +47,115 @@
             </p-table>
         </div>
 
-        <p-dialog [(visible)]="atividadeDialog" [style]="{width: '900px'}" header="Detalhes da atividade" [modal]="true" class="p-fluid">
+        <p-dialog [(visible)]="visitaDialog" [style]="{width: '1200px'}" [modal]="true" class="p-fluid" [maximizable]=true>
             <ng-template pTemplate="content">
-                <div class="formgrid grid mt-4">
-                    <div class="field col-5">
-                        <span class="p-float-label">
-                            <input type="text" id="inputtext" pInputText [(ngModel)]="atividade.nome" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !atividade.nome}">
-                            <label for="inputtext">Nome</label>
-                        </span>
-                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !atividade.nome">Insira um nome</small>
+                <div class="formgrid grid">
+                    <div class="col-12">
+                        <h5>Dados cliente</h5>
                     </div>
-                    <div class="field col-5">
+                    <div class="field col-6 mt-3 mt-3">
                         <span class="p-float-label">
-                            <p-dropdown inputId="dropdownTipoAtividade" [autoDisplayFirst]="false" appendTo="body" [options]="tipoAtividades" [(ngModel)]="atividade.tipoAtividade" optionLabel="descricao"></p-dropdown>
-                            <label for="dropdownTipoAtividade">Tipos de Atividade</label>
+                            <input type="text" id="inputNome" pInputText [(ngModel)]="cliente.nome" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !cliente.nome}">
+                            <label for="inputNome">Nome do cliente*</label>
                         </span>
-                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !atividade.tipoAtividade">Insira um tipo de atividade</small>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !cliente.nome">Insira um nome</small>
                     </div>
-                    <div class="field col-2">
+                    <div class="field col-6 mt-3 mt-3">
                         <span class="p-float-label">
-                            <p-inputNumber inputId="inputnumber" [(ngModel)]="atividade.valorReferencia" mode="currency" currency="BRL" locale="pt-BR"  [ngClass]="{'ng-invalid ng-dirty' : submitted && !atividade.valorReferencia}"></p-inputNumber>
-                            <label for="inputnumber">Valor</label>
+                            <p-inputMask [unmask]="true" id="inputCpf" [(ngModel)]="cliente.cpf" placeholder="999.999.999-99" mask="999.999.999-99"></p-inputMask>
+                            <label for="inputCpf">CPF</label>
                         </span>
-                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !atividade.valorReferencia">Insira um valor</small>
                     </div>
+                    <div class="field col-6 mt-3 mt-3">
+                        <span class="p-float-label">
+                            <p-inputMask [unmask]="true" id="inputTelefone" [(ngModel)]="cliente.telefone" [required]=true laceholder="(99) 99999-9999" mask="(99) 99999-9999" [ngClass]="{'ng-invalid ng-dirty' : submitted && !cliente.telefone}"></p-inputMask>
+                            <label for="inputTelefone">Telefone*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !cliente.telefone">Insira um telefone</small>
+                    </div>
+                    <div class="field col-6 mt-3 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="inputEmail" pInputText [(ngModel)]="cliente.email" >
+                            <label for="inputEmail">Email</label>
+                        </span>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <h5>Endereço</h5>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="CepAtendimentoInputEditDialog" pInputText [(ngModel)]="endereco.cep" (blur)="onCepSelected()">
+                            <label for="CepAtendimentoInputEditDialog">CEP</label>
+                        </span>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="RuaAtendimentoInputEditDialog" pInputText [(ngModel)]="endereco.rua" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.rua}">
+                            <label for="RuaAtendimentoInputEditDialog">Rua*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.rua">Defina uma rua para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="NúmeroAtendimentoInputEditDialog" pInputText [(ngModel)]="endereco.numero" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.rua}">
+                            <label for="NúmeroAtendimentoInputEditDialog">Número*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.rua">Defina um número para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="BairroAtendimentoInputEditDialog" pInputText [(ngModel)]="endereco.bairro" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.bairro}">
+                            <label for="BairroAtendimentoInputEditDialog">Bairro*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.bairro">Defina um bairro para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="CidadeAtendimentoInputEditDialog" pInputText [(ngModel)]="endereco.cidade" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.cidade}">
+                            <label for="CidadeAtendimentoInputEditDialog">Cidade*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.cidade">Defina uma cidade para o atendimento.</small>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <input type="text" id="UfAtendimentoInputEditDialog" pInputText [(ngModel)]="endereco.uf" [ngClass]="{'ng-invalid ng-dirty' : submitted && !endereco.uf}">
+                            <label for="UfAtendimentoInputEditDialog">UF*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !endereco.uf">Defina um estado para o atendimento.</small>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <h5>Detalhes Visita</h5>
+                    </div>
+                    <div class="field col-6 mt-3">
+                        <span class="p-float-label">
+                            <p-calendar dateFormat="dd/mm/yy" [showIcon]="true" id="inputDataVisita" [(ngModel)]="visita.dataVisita" [required] = true [ngClass]="{'ng-invalid ng-dirty' : submitted && !visita.dataVisita}"></p-calendar>
+                            <label for="inputDataVisita">Data da visita*</label>
+                        </span>
+                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !visita.dataVisita">Insira uma data</small>
+                    </div>
+                    <div class="field-checkbox col-3 mt-3">
+						<p-checkbox name="group1" [binary]="true" label="Cliente chegou pelo Site?" [(ngModel)]="visita.chegouSite" id="checkChegouSite"></p-checkbox>
+					</div>
+                    <div class="field-checkbox col-3 mt-3">
+						<p-checkbox name="group1" [binary]="true" label="Enviar Notificações por WPP?" [(ngModel)]="visita.notificarWpp" id="checkNotificarWpp"></p-checkbox>
+					</div>
                 </div>
             </ng-template>
 
             <ng-template pTemplate="footer">
                 <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text p-button-secondary" (click)="hideDialog()"></button>
-                <button pButton pRipple label="Salvar" icon="pi pi-check" class="p-button-text p-button-success" (click)="saveAtividade()"></button>
+                <button pButton pRipple label="Salvar" icon="pi pi-check" class="p-button-text p-button-success" (click)="saveVisita()"></button>
             </ng-template>
         </p-dialog>
 
-        <p-dialog [(visible)]="tipoAtividadeDialog" [style]="{width: '450px'}" header="Novo tipo de atividade" [modal]="true" class="p-fluid">
-            <ng-template pTemplate="content">
-                <div class="formgrid grid mt-4">
-                    <div class="field col">
-                        <span class="p-float-label">
-                            <input type="text" id="inputtext" pInputText [(ngModel)]="tipoAtividade.descricao" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !tipoAtividade.descricao}">
-                            <label for="inputtext">Nome do tipo de atividade</label>
-                        </span>
-                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !tipoAtividade.descricao">Insira um nome</small>
-                    </div>
-                </div>
-            </ng-template>
-
-            <ng-template pTemplate="footer">
-                <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text p-button-secondary" (click)="hideDialog()"></button>
-                <button pButton pRipple label="Salvar" icon="pi pi-check" class="p-button-text p-button-success" (click)="saveTipoAtividade()"></button>
-            </ng-template>
-        </p-dialog>
-
-        <p-dialog [(visible)]="deleteAtividadeDialog" header="Confirme" [modal]="true" [style]="{width:'450px'}" [dismissableMask]="true">
+        <p-dialog [(visible)]="deleteVisitaDialog" header="Confirme" [modal]="true" [style]="{width:'450px'}" [dismissableMask]="true">
             <div class="flex align-items-center justify-content-center">
                 <i class="pi pi-exclamation-triangle mr-3" style="font-size: 2rem"></i>
-                <span *ngIf="atividade">Deseja realmente deletar <b>{{atividade.nome}}</b>?</span>
+                <span *ngIf="visita">Deseja realmente deletar visita de Nº<b>{{visita.id}}</b>?</span>
             </div>
             <ng-template pTemplate="footer">
-                <button pButton pRipple icon="pi pi-times" class="p-button-text p-button-secondary" label="Cancelar" (click)="deleteAtividadeDialog = false"></button>
-                <button pButton pRipple icon="pi pi-trash" class="p-button-text p-button-danger" label="Deletar" (click)="confirmDeleteAtividade()"></button>
+                <button pButton pRipple icon="pi pi-times" class="p-button-text p-button-secondary" label="Cancelar" (click)="deleteVisitaDialog = false"></button>
+                <button pButton pRipple icon="pi pi-trash" class="p-button-text p-button-danger" label="Deletar" (click)="confirmDeleteVisita()"></button>
             </ng-template>
         </p-dialog>
     </div>
